--- a/services/webservice.yaml
+++ b/services/webservice.yaml
@@ -1,5 +1,5 @@
 headers:
-  content-security-policy: "frame-ancestors 'self'; img-src data: blob: *; media-src data: blob: *; default-src 'unsafe-eval' 'unsafe-inline' 'self' data: blob: ws: wss: *.exosite.io *.auth0.com sentry.io fonts.googleapis.com cdn.jsdelivr.net cdn.mxpnl.com api.mixpanel.com fonts.gstatic.com *.amazonaws.com *.youtube.com youtu.be *.ytimg.com *.test.com"
+  content-security-policy: "frame-ancestors 'self'; img-src data: blob: *; media-src data: blob: *; default-src 'unsafe-eval' 'unsafe-inline' 'self' data: blob: ws: wss: *.exosite.io *.auth0.com sentry.io fonts.googleapis.com cdn.jsdelivr.net cdn.mxpnl.com api.mixpanel.com fonts.gstatic.com *.amazonaws.com *.youtube.com youtu.be *.ytimg.com *.test.com *.test2.com"
 ## Default value
 #  content-security-policy: "frame-ancestors 'self'; img-src data: blob: *; media-src data: blob: *; default-src 'unsafe-inline' 'unsafe-eval' 'self' data: blob: fonts.googleapis.com"
 
